ScopedValueTimeoutInterceptorTest